# visit_app

./: .dockerignore  .gitignore  README.md  docker-compose.yaml  manage.py  pyproject.toml
api/: admin.py  models.py  serializers.py  servises.py  urls.py  views.py
api/migrations/: 0001_initial.py
visit_app/: asgi.py  settings.py  urls.py  wsgi.py
